k8s/docs/docs-middleware-basicauth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: docs-basicauth
  namespace: docs
spec:
  basicAuth:
    secret: docs-basic-auth
