k8s/docs/docs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hugo-docs
  namespace: docs
spec:
  selector:
    app: hugo-docs
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
