k8s/docs/docs-ingressroute-https.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hugo-docs-https
  namespace: docs
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`docs.etna.student`)
    kind: Rule
    middlewares:
    - name: docs-basicauth
    services:
    - name: hugo-docs
      port: 80
  tls:
    certResolver: letsencrypt
