k8s/docs/docs-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hugo-docs-http
  namespace: docs
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`docs.etna.student`)
    kind: Rule
    middlewares:
    - name: docs-basicauth
    services:
    - name: hugo-docs
      port: 80
